# semantic-draw

./: Makefile  README.md  README_old.md  pyproject.toml  requirement.txt
demo/canvas/: app.py
demo/canvas_sd3/: app.py
demo/canvas_sdxl/: app.py
demo/stream/: app.py
notebooks/: demo_inpaint.ipynb  demo_inpaint_sd3.ipynb  demo_simple.ipynb  demo_simple_kolors.ipynb  demo_simple_sd3.ipynb  demo_simple_sdxl.ipynb  demo_stream.ipynb
src/: __init__.py  data.py  util.py
src/model/: __init__.py  pipeline_semantic_draw.py  pipeline_semantic_draw_3.py  pipeline_semantic_draw_kolors.py  pipeline_semantic_draw_sdxl.py  semantic_draw.py  semantic_draw_3.py  semantic_draw_sdxl.py
